Fixed chat bar for bottom aligned input tag

--- a/Themes/Spotify-Discord/src/_selectorPlaceholders.scss
+++ b/Themes/Spotify-Discord/src/_selectorPlaceholders.scss
@@ -2011,6 +2011,9 @@
 .channelAppLauncher_e6e74f {
     @extend %channelAppLauncher !optional;
 }
+.buttonContainer_e6e74f {
+	@extend %channelAppLauncherButtonContainer !optional;
+}
 .button_e6e74f {
     @extend %channelAppLauncherButton !optional;
 }
@@ -2079,6 +2082,12 @@
 }
 .button__74017 {
 	@extend %channelTextAreaButton !optional;
+}
+.button__24af7 {
+	@extend %channelTextAreaButtonInner !optional;
+}
+.noHover__24af7 {
+	@extend %channelTextAreaButtonInnerNoHover !optional;
 }
 .emojiButton__04eed {
 	@extend %channelTextAreaEmojiButton !optional;
@@ -11194,6 +11203,9 @@ pre {
 
 .client-theme-color-picker {
     @extend %clientThemeColorPicker !optional;
+}
+.align-chat-input {
+    @extend %alignChatInput !optional;
 }
 .visual-refresh {
     @extend %visualRefresh !optional;
