--- a/Themes/Spotify-Discord/src/beta/_visualRefresh.scss
+++ b/Themes/Spotify-Discord/src/beta/_visualRefresh.scss
@@ -685,3 +685,15 @@
         box-shadow: var(--default-shadow);
     }
 }
+
+%alignChatInput {
+    %channelTextAreaAttachWrapper {
+        padding: 0;
+    }
+
+    %channelTextAreaAttachButtonInner,
+    %channelTextAreaButtonInner:not(%channelTextAreaButtonInnerNoHover),
+    %channelTextAreaEmojiButton {
+        border-radius: var(--space-16);
+    }
+}
